--- a/probability/kelly.ipynb
+++ b/probability/kelly.ipynb
@@ -24,7 +24,7 @@
     "* $f^{*}$ is the fraction of the current bankroll to wager.\n",
     "* $p$ is the probability of a win.\n",
     "* $q$ is the probability of a loss.\n",
-    "* $b$ is the proportion of the bet gained with a win. E.g. If betting \\$10 on a 2-to-1 odds bet, (upon win you are returned \\$30, winning you \\$20), then b=2."
+    "* $b$ is the proportion of the bet gained with a win. E.g. If betting 10 dollar on a 2-to-1 odds bet, (upon win you are returned 30 dollar, winning you 20 collar), then $b=2$."
    ]
   },
   {
