feat: bayes class calculating prob

--- a/probability/bayes/subjective.ipynb
+++ b/probability/bayes/subjective.ipynb
@@ -60,17 +60,19 @@
    "outputs": [
     {
      "data": {
+      "text/markdown": [
+       "$P(Earn|GoodSt) = \\dfrac{P(GoodSt|Earn)P(Earn)}{P(GoodSt)}$"
+      ],
       "text/plain": [
-       "<bayes.formula.Formula at 0x7f70746ac090>"
+       "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "Bayes(Event('Earn'), Event('GoodSt')).formula"
+    "Bayes(Event('Earn'), Event('GoodSt')).formula.basic"
    ]
   },
   {
@@ -79,25 +81,25 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m Bayes(eventA\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mHaveDisease\u001b[39;49m\u001b[39m'\u001b[39;49m, eventB\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mTestPositive\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39mformula_long\n",
-      "File \u001b[0;32m~/Dev/trading-lab/probability/bayes/bayes/__init__.py:11\u001b[0m, in \u001b[0;36mBayes.__init__\u001b[0;34m(self, eventA, eventB)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_a \u001b[39m=\u001b[39m eventA\n\u001b[1;32m     10\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_b \u001b[39m=\u001b[39m eventB\n\u001b[0;32m---> 11\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_formula \u001b[39m=\u001b[39m Formula(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_a\u001b[39m.\u001b[39;49mname,\n\u001b[1;32m     12\u001b[0m                         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_b\u001b[39m.\u001b[39mname)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'name'"
-     ]
+     "data": {
+      "text/markdown": [
+       "$P(HaveDisease|TestPositive) = \\dfrac{P(TestPositive|HaveDisease)P(HaveDisease)}{P(TestPositive|HaveDisease)P(HaveDisease) + P(TestPositive|\\neg{HaveDisease})P(\\neg{HaveDisease})}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "Bayes(Event('HaveDisease'), Event('TestPositive')).formula_long"
+    "Bayes(Event('HaveDisease'), Event('TestPositive')).formula.long"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +116,7 @@
     }
    ],
    "source": [
-    "Bayes(eventA='H', eventB='E').formula_long"
+    "Bayes(Event('H'), Event('E')).formula.long"
    ]
   }
  ],
