feat: display as fraction

--- a/probability/bayes/subjective.ipynb
+++ b/probability/bayes/subjective.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -69,10 +69,59 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3/4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "Bayes(Event('Earn'), Event('GoodSt')).formula.basic"
+    "a = Event('Earn', 1/2)\n",
+    "b = Event('GoodSt', 1/2).given(a, 3/4)\n",
+    "cond = Bayes(a, b)\n",
+    "cond.formula.basic\n",
+    "cond.prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "$P(Earn|GoodSt) = \\dfrac{P(GoodSt|Earn)P(Earn)}{P(GoodSt)}$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3/4"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = Event('HavdDisease', 1/2)\n",
+    "b = Event('TestPositive', 1/2).given(a, 3/4)\n",
+    "cond = Bayes(a, b)\n",
+    "cond.formula.basic\n",
+    "cond.prob"
    ]
   },
   {
